--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-marquee-text-component": "^1.1.1",
+    "vue-p5": "^0.7.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
