--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
+    "vue-js-modal": "^1.3.28",
     "vue-marquee-text-component": "^1.1.1",
     "vue-p5": "^0.7.1",
     "vue-router": "^3.0.1"
