--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
+    "keycode": "^2.2.0",
     "vue": "^2.5.2",
     "vue-js-modal": "^1.3.28",
     "vue-marquee-text-component": "^1.1.1",
